les joies du copier coller..
Reprendre le .tex de cells game.. ><"

--- a/Marktex/template.tex
+++ b/Marktex/template.tex
@@ -11,14 +11,14 @@
 
 \fancypagestyle{myfancy}{
   \renewcommand{\headrulewidth}{1pt}
-  \fancyhead[C]{Projet annuel} 
-  \fancyhead[L]{\scriptsize{BLOT Pierre-Luc, FIN Matthieu, COUSIN Alexandre}}
-  \fancyhead[R]{\scriptsize{L3 INFO}}
+  \fancyhead[C]{Titre document} 
+  \fancyhead[L]{\scriptsize{Author}}
+  \fancyhead[R]{\scriptsize{Info}}
 
   \renewcommand{\footrulewidth}{1pt}
   \fancyfoot[C]{} 
   \fancyfoot[L]{\scriptsize{\textbf{page \thepage}}}
-  \fancyfoot[R]{\scriptsize{06/05/14}}
+  \fancyfoot[R]{\scriptsize{18/09/14}}
 }
 \pagestyle{myfancy}
 
